@@ -4,6 +4,7 @@
 The following example report represents a valid example message.
 This example represents the data for a Service Provider that both sent and received documents within a Reporting Period.
 
+// Note: empty lines in the source code kill the XML formatting
 [source, xml]
 ----
 include::../../../../trn-end_user_statistics/example/end-user-statistics-reporting-appendix1.xml[]
