@@ -4,6 +4,7 @@
 The following example report represents a valid example message.
 This example represents a message in case no transmissions were performed within a Reporting Period.
 
+// Note: empty lines in the source code kill the XML formatting
 [source, xml]
 ----
 include::../../../../trn-end_user_statistics/example/end-user-statistics-reporting-appendix3.xml[]
